--- a/config/templates/protocols.template
+++ b/config/templates/protocols.template
@@ -4,7 +4,13 @@
 
 [PROTOCOLS]
 
-Protocols = [
-    {"tag": "section", "text": "Imports", "icon": "bookmark.png", "children": []}
-    ]
-
+Protocols = [{
+	"tag": "section",
+	"text": "Imports",
+	"icon": "bookmark.png",
+	"children": [{
+		"tag": "protocol",
+		"value": "ProtImportExperiment",
+		"text": "import experiment"
+	}]
+    }]
