--- a/config/templates/protocols.template
+++ b/config/templates/protocols.template
@@ -6,11 +6,21 @@
 
 Protocols = [{
 	"tag": "section",
-	"text": "Imports",
+	"text": "Experiments",
 	"icon": "bookmark.png",
 	"children": [{
 		"tag": "protocol",
 		"value": "ProtImportExperiment",
 		"text": "import experiment"
+	}]
+    },
+    {
+	"tag": "section",
+	"text": "Non-compartmental",
+	"icon": "bookmark.png",
+	"children": [{
+		"tag": "protocol",
+		"value": "ProtPKPDNCA",
+		"text": "non-compartmental analysis"
 	}]
     }]
