Join samples added

--- a/config/templates/protocols.template
+++ b/config/templates/protocols.template
@@ -16,6 +16,10 @@ Protocols = [{
 		"tag": "protocol",
 		"value": "ProtPKPDFilterSamples",
 		"text": "filter samples"
+	},{
+		"tag": "protocol",
+		"value": "ProtPKPDJoinSamples",
+		"text": "join samples"
 	}]
     },
     {
