Code reorganized and disclaimer changed to kinestat

--- a/config/templates/protocols.template
+++ b/config/templates/protocols.template
@@ -20,6 +20,10 @@ Protocols = [{
 		"tag": "protocol",
 		"value": "ProtPKPDJoinSamples",
 		"text": "join samples"
+	},{
+		"tag": "protocol",
+		"value": "ProtPKPDFilterMeasurements",
+		"text": "filter measurements"
 	}]
     },
     {
