Exponential fit with its menu added

--- a/config/templates/protocols.template
+++ b/config/templates/protocols.template
@@ -32,6 +32,11 @@ Protocols = [{
 	"icon": "bookmark.png",
 	"children": [{
 		"tag": "protocol",
+		"value": "ProtPKPDExponentialFit",
+		"text": "fit exponentials"
+	},{
+
+		"tag": "protocol",
 		"value": "ProtPKPDNCA",
 		"text": "non-compartmental analysis"
 	}]
