--- a/config/templates/protocols.template
+++ b/config/templates/protocols.template
@@ -14,6 +14,10 @@ Protocols = [{
 		"text": "import experiment"
 	},{
 		"tag": "protocol",
+		"value": "ProtPKPDImportFromCSV",
+		"text": "import from csv"
+	},{
+		"tag": "protocol",
 		"value": "ProtPKPDExportToCSV",
 		"text": "export to csv"
 	},{
