Generic PD fitting added

--- a/config/templates/protocols.template
+++ b/config/templates/protocols.template
@@ -64,5 +64,9 @@ Protocols = [{
 		"tag": "protocol",
 		"value": "ProtPKPDSimulateGenericPD",
 		"text": "simulate generic"
+	},{
+		"tag": "protocol",
+		"value": "ProtPKPDGenericFit",
+		"text": "fit pd generic"
 	}]
     }]
