--- a/config/templates/protocols.template
+++ b/config/templates/protocols.template
@@ -18,6 +18,10 @@ Protocols = [{
 		"text": "import from csv"
 	},{
 		"tag": "protocol",
+		"value": "ProtPKPDImportFromWinnonlin",
+		"text": "import from winnonlin"
+	},{
+		"tag": "protocol",
 		"value": "ProtPKPDExportToCSV",
 		"text": "export to csv"
 	},{
@@ -100,6 +104,16 @@ Protocols = [{
 		"tag": "protocol",
 		"value": "ProtPKPDNCAEV",
 		"text": "NCA ev bolus"
+	}]
+    },
+    {
+	"tag": "section",
+	"text": "Compartmental PK",
+	"icon": "bookmark.png",
+	"children": [{
+		"tag": "protocol",
+		"value": "ProtPKPDIVMonoCompartment",
+		"text": "iv monocompartment"
 	}]
     },
     {
