EV monocompartment added, but still needed to better validate

--- a/config/templates/protocols.template
+++ b/config/templates/protocols.template
@@ -118,6 +118,10 @@ Protocols = [{
 		"tag": "protocol",
 		"value": "ProtPKPDIVMonoCompartment",
 		"text": "iv monocompartment"
+	},{
+		"tag": "protocol",
+		"value": "ProtPKPDEV1MonoCompartment",
+		"text": "ev1 monocompartment"
 	}]
     },
     {
