--- a/config/templates/protocols.template
+++ b/config/templates/protocols.template
@@ -122,6 +122,10 @@ Protocols = [{
 		"tag": "protocol",
 		"value": "ProtPKPDEV1MonoCompartment",
 		"text": "ev1 monocompartment"
+	},{
+		"tag": "protocol",
+		"value": "ProtPKPDODEBootstrap",
+		"text": "ode bootstrap"
 	}]
     },
     {
