--- a/config/templates/protocols.template
+++ b/config/templates/protocols.template
@@ -100,6 +100,10 @@ Protocols = [{
 		"tag": "protocol",
 		"value": "ProtPKPDRegressionLabel",
 		"text": "regression"
+	},{
+		"tag": "protocol",
+		"value": "ProtPKPDStatisticsLabel",
+		"text": "statistical descriptors"
 	}]
     },
     {
