--- a/config/templates/protocols.template
+++ b/config/templates/protocols.template
@@ -154,6 +154,10 @@ Protocols = [{
 		"text": "ev0 monocompartment"
 	},{
 		"tag": "protocol",
+		"value": "ProtPKPDEV01MonoCompartment",
+		"text": "ev0&1 monocompartment"
+	},{
+		"tag": "protocol",
 		"value": "ProtPKPDEV1MonoCompartment",
 		"text": "ev1 monocompartment"
 	},{
