--- a/config/templates/protocols.template
+++ b/config/templates/protocols.template
@@ -174,6 +174,10 @@ Protocols = [{
 		"text": "ev1 monocompartment"
 	},{
 		"tag": "protocol",
+		"value": "ProtPKPDEV1TwoCompartments",
+		"text": "ev1 two-compartments"
+	},{
+		"tag": "protocol",
 		"value": "ProtPKPDODERefine",
 		"text": "ode refinement"
 	}]
