--- a/config/templates/protocols.template
+++ b/config/templates/protocols.template
@@ -202,6 +202,16 @@ Protocols = [{
     },
     {
 	"tag": "section",
+	"text": "Physiologically based PK",
+	"icon": "bookmark.png",
+	"children": [{
+		"tag": "protocol",
+		"value": "ProtPKPDSimulateLiverFlow",
+		"text": "simulate liver flow"
+	}]
+    },
+    {
+	"tag": "section",
 	"text": "Misc",
 	"icon": "bookmark.png",
 	"children": [{
