change via protocol added

--- a/config/templates/protocols.template
+++ b/config/templates/protocols.template
@@ -62,6 +62,10 @@ Protocols = [{
 		"text": "change units"
 	},{
 		"tag": "protocol",
+		"value": "ProtPKPDChangeVia",
+		"text": "change via"
+	},{
+		"tag": "protocol",
 		"value": "ProtPKPDScaleToCommonDose",
 		"text": "scale dose"
 	},{
