Estimate bioavailability from NCA added

--- a/config/templates/protocols.template
+++ b/config/templates/protocols.template
@@ -142,6 +142,10 @@ Protocols = [{
 		"tag": "protocol",
 		"value": "ProtPKPDNCAEV",
 		"text": "NCA ev bolus"
+	},{
+		"tag": "protocol",
+		"value": "ProtPKPDNCAEstimateBioavailability",
+		"text": "estimate bioavailability"
 	}]
     },
     {
