PK07 fully working

--- a/config/templates/protocols.template
+++ b/config/templates/protocols.template
@@ -162,6 +162,10 @@ Protocols = [{
 		"text": "monocompartment (urine)"
 	},{
 		"tag": "protocol",
+		"value": "ProtPKPDTwoCompartments",
+		"text": "two compartments"
+	},{
+		"tag": "protocol",
 		"value": "ProtPKPDODERefine",
 		"text": "ode refinement"
 	}]
