Two-compartments with intrinsic clearance added

--- a/config/templates/protocols.template
+++ b/config/templates/protocols.template
@@ -170,6 +170,10 @@ Protocols = [{
 		"text": "two compartments (urine)"
 	},{
 		"tag": "protocol",
+		"value": "ProtPKPDTwoCompartmentsClint",
+		"text": "two compartments (intrinsic)"
+	},{
+		"tag": "protocol",
 		"value": "ProtPKPDODERefine",
 		"text": "ode refinement"
 	},{
