--- a/config/templates/protocols.template
+++ b/config/templates/protocols.template
@@ -174,6 +174,10 @@ Protocols = [{
 		"text": "two compartments (intrinsic)"
 	},{
 		"tag": "protocol",
+		"value": "ProtPKPDTwoCompartmentsClintMetabolite",
+		"text": "two compartments (intrinsic, metabolite)"
+	},{
+		"tag": "protocol",
 		"value": "ProtPKPDODERefine",
 		"text": "ode refinement"
 	},{
