Allometric scale added

--- a/config/templates/protocols.template
+++ b/config/templates/protocols.template
@@ -86,6 +86,10 @@ Protocols = [{
 		"tag": "protocol",
 		"value": "ProtPKPDFilterPopulation",
 		"text": "filter population"
+	},{
+		"tag": "protocol",
+		"value": "ProtPKPDAllometricScaling",
+		"text": "allometric scaling"
 	}]
     },
     {
