Apply allometric scaling added

--- a/config/templates/protocols.template
+++ b/config/templates/protocols.template
@@ -90,6 +90,10 @@ Protocols = [{
 		"tag": "protocol",
 		"value": "ProtPKPDAllometricScaling",
 		"text": "allometric scaling"
+	},{
+		"tag": "protocol",
+		"value": "ProtPKPDApplyAllometricScaling",
+		"text": "apply allometric"
 	}]
     },
     {
