Dose escalation added

--- a/config/templates/protocols.template
+++ b/config/templates/protocols.template
@@ -256,6 +256,10 @@ Protocols = [{
 		"tag": "protocol",
 		"value": "ProtPKPDSimulateDoseEscalation",
 		"text": "simulate"
+	},{
+		"tag": "protocol",
+		"value": "ProtPKPDDoseEscalation",
+		"text": "estimate dose"
 	}]
     },
     {
